syntax = "proto3";

package proto;

option go_package = "github.com/msmkdenis/yap-infokeeper/internal/user/api/grpchandlers/proto";

message PostUserRegisterRequest {
  string id = 1;
  string login = 2;
  bytes password = 3;
}

message PostUserRegisterResponse {
  string token = 1;
}

service UserService {
  rpc PostRegisterUser(PostUserRegisterRequest) returns (PostUserRegisterResponse);
}